--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>javax.inject</artifactId>
             <version>1</version>
         </dependency>
+        <dependency>
+	      <groupId>javax.jdo</groupId>
+	      <artifactId>jdo-api</artifactId>
+	      <version>3.0.1</version>
+	    </dependency>
 
         <!-- Test Dependencies -->
         <dependency>
@@ -124,6 +129,7 @@
                 <version>${appengine.version}</version>
                 <configuration>
                     <enableJarClasses>false</enableJarClasses>
+                    <version>${app.version}</version>
                     <!-- Comment in the below snippet to bind to all IPs instead of just localhost -->
                     <!-- address>0.0.0.0</address>
                     <port>8080</port -->
