--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,31 @@
 	      <artifactId>jdo-api</artifactId>
 	      <version>3.0.1</version>
 	    </dependency>
+	    <dependency>
+	      <groupId>javax.persistence</groupId>
+	      <artifactId>persistence-api</artifactId>
+	      <version>1.0.2</version>
+	    </dependency>
+        <dependency>
+          <groupId>org.datanucleus</groupId>
+          <artifactId>datanucleus-core</artifactId>
+          <version>3.1.4</version>
+        </dependency>
+        <dependency>
+          <groupId>com.google.appengine.orm</groupId>
+          <artifactId>datanucleus-appengine</artifactId>
+          <version>2.1.2</version>
+        </dependency>
+        <dependency>
+          <groupId>org.datanucleus</groupId>
+          <artifactId>datanucleus-api-jdo</artifactId>
+          <version>3.1.3</version>
+        </dependency>
+        <dependency>
+          <groupId>com.google.code.findbugs</groupId>
+          <artifactId>jsr305</artifactId>
+          <version>1.3.9</version>
+        </dependency>
 
         <!-- Test Dependencies -->
         <dependency>
