--- a/pom.xml
+++ b/pom.xml
@@ -44,36 +44,14 @@
             <artifactId>javax.inject</artifactId>
             <version>1</version>
         </dependency>
+
+        <!-- TropTardMiage Dependencies -->
         <dependency>
-	      <groupId>javax.jdo</groupId>
-	      <artifactId>jdo-api</artifactId>
-	      <version>3.0.1</version>
-	    </dependency>
-	    <dependency>
-	      <groupId>javax.persistence</groupId>
-	      <artifactId>persistence-api</artifactId>
-	      <version>1.0.2</version>
-	    </dependency>
-        <dependency>
-          <groupId>org.datanucleus</groupId>
-          <artifactId>datanucleus-core</artifactId>
-          <version>3.1.4</version>
+            <groupId>com.googlecode.objectify</groupId>
+            <artifactId>objectify</artifactId>
+            <version>5.1.5</version>
         </dependency>
-        <dependency>
-          <groupId>com.google.appengine.orm</groupId>
-          <artifactId>datanucleus-appengine</artifactId>
-          <version>2.1.2</version>
-        </dependency>
-        <dependency>
-          <groupId>org.datanucleus</groupId>
-          <artifactId>datanucleus-api-jdo</artifactId>
-          <version>3.1.3</version>
-        </dependency>
-        <dependency>
-          <groupId>com.google.code.findbugs</groupId>
-          <artifactId>jsr305</artifactId>
-          <version>1.3.9</version>
-        </dependency>
+
 
         <!-- Test Dependencies -->
         <dependency>
