--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
         <servlet-class>com.google.api.server.spi.SystemServiceServlet</servlet-class>
         <init-param>
             <param-name>services</param-name>
-            <param-value>fr.miagenantes.troptardmiage.entities.EventEndpoint,fr.miagenantes.troptardmiage.entities.ThemeEndpoint,fr.miagenantes.troptardmiage.entities.UserTtmEndpoint</param-value>
+            <param-value>fr.miagenantes.troptardmiage.endpoints.EventEndpoint,fr.miagenantes.troptardmiage.endpoints.ThemeEndpoint,fr.miagenantes.troptardmiage.endpoints.UserTtmEndpoint</param-value>
         </init-param>
     </servlet>
     <servlet-mapping>
@@ -14,4 +14,12 @@
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
+    <filter>
+     <filter-name>ObjectifyFilter</filter-name>
+     <filter-class>com.googlecode.objectify.ObjectifyFilter</filter-class>
+    </filter>
+    <filter-mapping>
+     <filter-name>ObjectifyFilter</filter-name>
+     <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
